--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,7 @@ set-option -g prefix C-f
 set-option -g status-left-length 90
 set-option -g status-right-length 90
 
-set-option -g status-position top
+set-option -g status-position bottom
 set-option -g status-left '#h:[#P]#S'
 # set-option -g status-right "#[fg=black][%Y/%m/%d %H:%M]"
 set-option -g status-right '#[fg=black] %H:%M | %m/%d %a#[default]'
